--- a/css/style-anp-basic.css
+++ b/css/style-anp-basic.css
@@ -1,7 +1,7 @@
 
 
 /*--------------------------------------------------------------
-2.0 Accessibility
+1.0 Accessibility
 --------------------------------------------------------------*/
 
 /* Text meant only for screen readers. */
@@ -44,7 +44,7 @@
 
 
 /*--------------------------------------------------------------
-3.0 Alignments
+2.0 Alignments
 --------------------------------------------------------------*/
 
 .alignleft {
@@ -95,7 +95,7 @@ img.alignright {
 
 
 /*--------------------------------------------------------------
-# Clearings
+3.0 Clearings
 
 * Add to/remove from this list as necessary.
 
@@ -128,7 +128,7 @@ img.alignright {
 
 
 /*--------------------------------------------------------------
-# Typography
+4.0 Typography
 --------------------------------------------------------------*/
 body,
 button,
@@ -280,7 +280,7 @@ big {
 }
 
 /*--------------------------------------------------------------
-# Elements
+5.0 Elements
 --------------------------------------------------------------*/
 html {
 	-webkit-box-sizing: border-box;
@@ -322,7 +322,8 @@ hr {
 }
 
 
-/* Lists
+/*-------------------------------------------------------------
+6.0 Lists
 -------------------------------------------------------------*/
 
 ul,
@@ -356,7 +357,7 @@ dd {
 
 
 /*--------------------------------------------------------------
-9.0 Tables
+7.0 Tables
 --------------------------------------------------------------*/
 
 table {
@@ -397,7 +398,7 @@ td:last-child {
 
 
 /*--------------------------------------------------------------
-# Media
+8.0 Media
 --------------------------------------------------------------*/
 img,
 video {
@@ -431,7 +432,7 @@ video {
 
 
 /*--------------------------------------------------------------
-## Links
+9.0 Links
 --------------------------------------------------------------*/
 a {
 	color: inherit;
@@ -464,7 +465,7 @@ h6 > a {
 }
 
 /*--------------------------------------------------------------
-# Forms
+10.0 Forms
 
 .button class is used in Skeleton, don't necessarily need to use it in my design
 
@@ -588,6 +589,99 @@ input[type="submit"].button-primary:active {
 
 
 
+/* From Specular
+-----------------------------------*/
+
+.btn-bt{
+    color: #222;
+    background: rgba(255, 255, 255, 0.00);
+    border-color: rgba(68, 68, 68, 0.20);
+    font-size: 13px;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+	text-align: center;
+	cursor: pointer;
+	display: inline-block;
+	outline: 0;
+	position: relative;
+	-webkit-transition: all .3s ease;
+	-moz-transition: all .3s ease;
+	-ms-transition: all .3s ease;
+	-o-transition: all .3s ease;
+	transition: all .3s ease;
+	-webkit-transform: translateZ(0);
+	-moz-transform: translateZ(0);
+	-ms-transform: translateZ(0);
+	-o-transform: translateZ(0);
+	transform: translateZ(0);
+	border-width:2px;
+	border-style:solid;
+	float:left;
+	padding:10px 38px;
+	border-radius:3px;
+	-webkit-border-radius:3px;
+	-moz-border-radius:3px;
+	-webkit-backface-visibility: hidden;
+}
+
+
+.btn-bt span {
+  position: relative;
+  left: 0;
+  -webkit-transition: all .3s ease-out;
+  -moz-transition: all .3s ease-out;
+  -ms-transition: all .3s ease-out;
+  -o-transition: all .3s ease-out;
+  transition: all .3s ease-out;
+}
+
+.btn-bt:hover span {
+	left: -1em;
+}
+
+.btn-bt i {
+  font-size: 14px;
+  position: absolute;
+  top: 50%;
+  line-height:20px;
+  margin-top:1px;
+  left: 73%;
+  -ms-filter: "alpha(Opacity=0)";
+  filter: alpha(opacity=0);
+  opacity: 0;
+  -webkit-transition: all .3s ease-out;
+  -moz-transition: all .3s ease-out;
+  -ms-transition: all .3s ease-out;
+  -o-transition: all .3s ease-out;
+  transition: all .3s ease-out;
+}
+.btn-bt:hover i {
+  left: 77%;
+  -ms-filter: "alpha(Opacity=100)";
+  filter: alpha(opacity=100);
+  opacity: 1;
+}
+
+.btn-bt i{
+  -webkit-transform: translateY(-50%);
+     -moz-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+       -o-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+.btn-bt:hover{
+	border:2px solid;
+	color: #222222;
+	background: rgba(255, 255, 255, 0.00);
+	border-color: rgba(68, 68, 68, 1.00);
+}
+.btn-bt:hover i{
+  left:80%;
+}
+
+
+
 
 
 
@@ -597,35 +691,9 @@ input[type="submit"].button-primary:active {
 
 
 /* input types
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input 
+"https://developer.mozilla.org/en-US/docs/Web/HTML/Element/input"
+--------------------------------------------------------------------*/
 
-button
-submit
-reset
-
-color
-date
-datetime
-datetime-local
-email
-month
-number
-password
-range
-search
-tel
-text
-time
-url
-week
-
-checkbox
-radio
-
-file
-hidden
-image
-*/
 input[type="color"],
 input[type="date"],
 input[type="datetime"],
