--- a/css/style-anp-theme.css
+++ b/css/style-anp-theme.css
@@ -14,13 +14,13 @@ in my case, 'blog' would only show up on the Blog page, and 'home' would show up
 basically, home and blog would only show up together if home page was also set to blog page.
 
 
-
+start at 11.0 Layout due to basic.css
 --------------------------------------------------------------*/
 
 
 
 
-/* 1.0 Layout
+/* 11.0 Layout
 --------------------------------------------------------------*/
 
 #page {
@@ -48,7 +48,7 @@ basically, home and blog would only show up together if home page was also set t
 
 
 
-/* 2.0 Header
+/* 12.0 Header
 --------------------------------------------------------------*/
 
 .site-header {
@@ -201,7 +201,7 @@ basically, home and blog would only show up together if home page was also set t
 
 
 
-/* 2.0 Navigation
+/* 13.0 Navigation
 --------------------------------------------------------------*/
 
 .main-navigation {
@@ -270,7 +270,7 @@ basically, home and blog would only show up together if home page was also set t
 
 
 
-/* Social navigation (appears in both .main-navigation and footer)*/
+/* Social navigation (in header). Also found in footer, but styled differently */
 
 .social-navigation {
 }
@@ -318,7 +318,7 @@ basically, home and blog would only show up together if home page was also set t
 
 
 /*--------------------------------------------------------------
-3.0 Front Page
+14.0 Front Page
 --------------------------------------------------------------*/
 
 .anp-panel {
@@ -427,110 +427,8 @@ basically, home and blog would only show up together if home page was also set t
 
 
 
-
-
-
-
-
-/* From Specular
------------------------------------*/
-
-.btn-bt{
-    color: #222;
-    background: rgba(255, 255, 255, 0.00);
-    border-color: rgba(68, 68, 68, 0.20);
-    font-size: 13px;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 1.5px;
-	text-align: center;
-	cursor: pointer;
-	display: inline-block;
-	outline: 0;
-	position: relative;
-	-webkit-transition: all .3s ease;
-	-moz-transition: all .3s ease;
-	-ms-transition: all .3s ease;
-	-o-transition: all .3s ease;
-	transition: all .3s ease;
-	-webkit-transform: translateZ(0);
-	-moz-transform: translateZ(0);
-	-ms-transform: translateZ(0);
-	-o-transform: translateZ(0);
-	transform: translateZ(0);
-	border-width:2px;
-	border-style:solid;
-	float:left;
-	padding:10px 38px;
-	border-radius:3px;
-	-webkit-border-radius:3px;
-	-moz-border-radius:3px;
-	-webkit-backface-visibility: hidden;
-}
-
-
-.btn-bt span {
-  position: relative;
-  left: 0;
-  -webkit-transition: all .3s ease-out;
-  -moz-transition: all .3s ease-out;
-  -ms-transition: all .3s ease-out;
-  -o-transition: all .3s ease-out;
-  transition: all .3s ease-out;
-}
-
-.btn-bt:hover span {
-	left: -1em;
-}
-
-.btn-bt i {
-  font-size: 14px;
-  position: absolute;
-  top: 50%;
-  line-height:20px;
-  margin-top:1px;
-  left: 73%;
-  -ms-filter: "alpha(Opacity=0)";
-  filter: alpha(opacity=0);
-  opacity: 0;
-  -webkit-transition: all .3s ease-out;
-  -moz-transition: all .3s ease-out;
-  -ms-transition: all .3s ease-out;
-  -o-transition: all .3s ease-out;
-  transition: all .3s ease-out;
-}
-.btn-bt:hover i {
-  left: 77%;
-  -ms-filter: "alpha(Opacity=100)";
-  filter: alpha(opacity=100);
-  opacity: 1;
-}
-
-.btn-bt i{
-  -webkit-transform: translateY(-50%);
-     -moz-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-       -o-transform: translateY(-50%);
-          transform: translateY(-50%);
-}
-.btn-bt:hover{
-	border:2px solid;
-	color: #222222;
-	background: rgba(255, 255, 255, 0.00);
-	border-color: rgba(68, 68, 68, 1.00);
-}
-.btn-bt:hover i{
-  left:80%;
-}
-
-
-
-
-
-
-
 /*--------------------------------------------------------------
-3.1 Regular Content
+15.0 Regular Content
 --------------------------------------------------------------*/
 
 .site-content-contain {
@@ -547,7 +445,7 @@ basically, home and blog would only show up together if home page was also set t
 }
 
 /*--------------------------------------------------------------
-3.2 Posts
+15.1 Posts
 --------------------------------------------------------------*/
 
 /* Post Landing Page */
@@ -930,7 +828,7 @@ body:not(.anp-front-page) .entry-header {
 }
 
 /*--------------------------------------------------------------
-3.3 Pages
+15.2 Pages
 --------------------------------------------------------------*/
 
 .page-header {
@@ -986,7 +884,7 @@ body:not(.anp-front-page) .entry-header {
 
 
 /*--------------------------------------------------------------
-4.0 Footer
+16.0 Footer
 --------------------------------------------------------------*/
 .site-info{
 	padding: 2em 0;
@@ -997,7 +895,7 @@ body:not(.anp-front-page) .entry-header {
 
 
 /*--------------------------------------------------------------
-15.0 Widgets
+17.0 Widgets
 --------------------------------------------------------------*/
 
 #secondary {
@@ -1254,12 +1152,8 @@ h2.widget-title {
 
 
 /*--------------------------------------------------------------
-6.0 Media
+18.0 Media
 --------------------------------------------------------------*/
-
-
-
-
 
 .wp-caption,
 .gallery-caption {
@@ -1293,7 +1187,7 @@ h2.widget-title {
 
 
 /*--------------------------------------------------------------
-7.0 ANP Customs
+19.0 ANP Customs
 --------------------------------------------------------------*/
 
 
