--- a/css/style-anp-basic.css
+++ b/css/style-anp-basic.css
@@ -94,37 +94,7 @@ img.alignright {
 
 
 
-/*--------------------------------------------------------------
-3.0 Clearings
 
-* Add to/remove from this list as necessary.
-
---------------------------------------------------------------*/
-.clear:before,
-.clear:after,
-.entry-content:before,
-.entry-content:after,
-.comment-content:before,
-.comment-content:after,
-.site-header:before,
-.site-header:after,
-.site-content:before,
-.site-content:after,
-.site-footer:before,
-.site-footer:after {
-	content: "";
-	display: table;
-	table-layout: fixed;
-}
-
-.clear:after,
-.entry-content:after,
-.comment-content:after,
-.site-header:after,
-.site-content:after,
-.site-footer:after {
-	clear: both;
-}
 
 
 /*--------------------------------------------------------------
@@ -135,7 +105,7 @@ button,
 input,
 select,
 textarea {
-	color: #777;
+	color: #9a9d9e;
     font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 15px;
 	font-size: .9375rem;
@@ -454,15 +424,6 @@ a:active {
 	outline: 0;
 }
 
-/* For links wrapped in h tags */
-h1 > a,
-h2 > a,
-h3 > a,
-h4 > a,
-h5 > a,
-h6 > a {
-    color: inherit;
-}
 
 /*--------------------------------------------------------------
 10.0 Forms
