--- a/css/style-anp-responsive.css
+++ b/css/style-anp-responsive.css
@@ -220,6 +220,7 @@
 	/* Show it (not shown on smaller than 45em screen sizes) */
 	
 	.site-header .menu-scroll-down-container {
+		display: block;
 		position: absolute;
 		left: 0;
 		bottom: 0;
@@ -641,7 +642,11 @@
 		width: auto;
 		clear: none;
 		padding: 0;
-	}
+		/* remove box shadow from mobile menu view */
+		-webkit-box-shadow: none;
+		   -moz-box-shadow: none;
+				box-shadow: none;
+}
 	
 	.site-branding {
 		float: left;
